package com.example.android.nadris.data.models

import com.example.android.nadris.network.firebase.dtos.LessonDTO

//data class CourseUnitModel(
//    val unitId: Long,
//    val subjectId: Long,
//    val name: String,
//    val term: String,
//    val lessons: List<LessonDTO>,
//)