package com.example.android.nadris.network.dtos

data class UniversityDTO(
    val id: Int,
    val name: String
)
data class CollegeDTO(
    val id: Int,
    val name: String
)